--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <p>Registros sobre 2.5 M de la última semana:</p>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 50" id="viz"></svg>
             <footer>
-                <p>Desarrollado por <a href="#" target="_blank">Nombre Apellido</a> &copy; 2025</p>
+                <p>Desarrollado por <a href="https://github.com/piamunoz" target="_blank">Pía Muñoz</a> &copy; 2025</p>
             </footer>
         </div>
         <script>
